--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,4 @@ GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SIMD = "fdea26ae-647d-5447-a871-4b548cad5224"
